# AIchat

./: .gitignore  README.md  ai虚拟角色聊天平台-架构设计文档.docx  readme.md
chatWindow/ysu-ui/: index.html  package-lock.json  package.json  vite.config.js
chatWindow/ysu-ui/src/: App.vue
chatWindow/ysu-ui/src/components/: ChatWindow.vue  loginRegister.vue
public/: test  test.cc
server/: test.cpp
server/assistant/: assistant.xml
server/config/: config.conf  log4cpp.conf  nginx.conf
server/src/: CMakeLists.txt  Configuration.cc  Configuration.h  Log.h  main.cc  noncopyable.h  utils.cc  utils.h
server/src/RocketMQ/: RocketConsumer.cc  RocketConsumer.h  RocketProducer.h
server/src/bluePrint/: BluePrint.h  BpBase.h  HttpClient.h  MySqlBp.cc  MySqlBp.h  MySqlClient.cc  MySqlClient.h  chatBp.cc  chatBp.h  chatBp_cookie.cc  userBp.cc  userBp.h
server/src/client/: HttpClient.cc  HttpClient.h  HttpClient_2.cc  HttpClient_2.h  MySqlClient.cc  MySqlClient.h  RedisClient.cc  RedisClient.h  httpClient.h
server/src/database/: MySQL.h  Redis.h
server/test/: test  test.cc  testMySql  testMySql.cc  testRedis  testRedis.cc
